// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`available item filtering item filtering should filter-in date dataset if attribute ref matches 1`] = `
Array [
  Object {
    "dataSet": Object {
      "deprecated": false,
      "description": "DataSet Date",
      "id": "activity.dataset.dt",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/887",
      },
      "title": "Date (Activity)",
      "type": "dataSet",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/887",
    },
    "dateAttributes": Array [
      Object {
        "attribute": Object {
          "deprecated": false,
          "description": "Year",
          "drillDownStep": Object {
            "uri": "/gdc/md/referenceworkspace/obj/877",
          },
          "id": "activity.year",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/827",
          },
          "title": "Year (Activity)",
          "type": "attribute",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/827",
        },
        "defaultDisplayForm": Object {
          "deprecated": false,
          "description": "DisplayForm Year.",
          "id": "activity.aag81lMifn6q",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/845",
          },
          "title": "Year (Activity)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/845",
        },
        "granularity": "GDC.time.year",
      },
      Object {
        "attribute": Object {
          "deprecated": false,
          "description": "Week/Year based on US Weeks (Sun-Sat). By default, if a week spans multiple years or quarters (ie, end of the year/quarter), it is marked as first or last week of the period according to particular standards (ie, US or EU). Labels marked as \\"Continuous\\" show both weeks (W53/2009 - W1/2010).",
          "drillDownStep": Object {
            "uri": "/gdc/md/referenceworkspace/obj/883",
          },
          "id": "activity.week",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/829",
          },
          "title": "Week (Sun-Sat)/Year (Activity)",
          "type": "attribute",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/829",
        },
        "defaultDisplayForm": Object {
          "deprecated": false,
          "description": "DisplayForm Week #/Year (W1/2010).",
          "id": "activity.aaA81lMifn6q",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/851",
          },
          "title": "Week #/Year (W1/2010) (Activity)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/851",
        },
        "granularity": "GDC.time.week_us",
      },
      Object {
        "attribute": Object {
          "deprecated": false,
          "description": "Quarter and Year (Q1/2010)",
          "drillDownStep": Object {
            "uri": "/gdc/md/referenceworkspace/obj/878",
          },
          "id": "activity.quarter",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/842",
          },
          "title": "Quarter/Year (Activity)",
          "type": "attribute",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/842",
        },
        "defaultDisplayForm": Object {
          "deprecated": false,
          "description": "DisplayForm US Short.",
          "id": "activity.aci81lMifn6q",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/877",
          },
          "title": "US Short (Activity)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/877",
        },
        "granularity": "GDC.time.quarter",
      },
      Object {
        "attribute": Object {
          "deprecated": false,
          "description": "Month and Year",
          "drillDownStep": Object {
            "uri": "/gdc/md/referenceworkspace/obj/883",
          },
          "id": "activity.month",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/843",
          },
          "title": "Month/Year (Activity)",
          "type": "attribute",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/843",
        },
        "defaultDisplayForm": Object {
          "deprecated": false,
          "description": "DisplayForm Short (Jan 2010).",
          "id": "activity.act81lMifn6q",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/878",
          },
          "title": "Short (Jan 2010) (Activity)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/878",
        },
        "granularity": "GDC.time.month",
      },
      Object {
        "attribute": Object {
          "deprecated": false,
          "description": "Date",
          "id": "activity.date",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/844",
          },
          "title": "Date (Activity)",
          "type": "attribute",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/844",
        },
        "defaultDisplayForm": Object {
          "deprecated": false,
          "description": "DisplayForm mm/dd/yyyy.",
          "id": "activity.date.mmddyyyy",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/883",
          },
          "title": "mm/dd/yyyy (Activity)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/883",
        },
        "granularity": "GDC.time.date",
      },
    ],
    "relevance": 0,
    "type": "dateDataset",
  },
]
`;

exports[`available item filtering item filtering should filter-in simple object if ref matches 1`] = `
Array [
  Object {
    "groups": Array [],
    "measure": Object {
      "deprecated": false,
      "description": "",
      "expression": "SELECT MAX([/gdc/md/referenceworkspace/obj/1105]) BY ALL IN ALL OTHER DIMENSIONS EXCEPT [/gdc/md/referenceworkspace/obj/679] WHERE [/gdc/md/referenceworkspace/obj/1105] <= [/gdc/md/referenceworkspace/obj/1266]
",
      "format": "#,##0.00",
      "id": "abxgDICQav2J",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1267",
      },
      "title": "_Snapshot [EOP]",
      "type": "measure",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1267",
    },
    "type": "measure",
  },
]
`;

exports[`available item filtering response conversion should convert attribute id when it comes as object 1`] = `
Array [
  Object {
    "identifier": "id",
    "type": "attribute",
  },
]
`;

exports[`available item filtering response conversion should convert attribute id when it comes as string 1`] = `
Array [
  Object {
    "identifier": "some_id",
    "type": "attribute",
  },
]
`;

exports[`available item filtering response conversion should convert fact when it comes as object 1`] = `
Array [
  Object {
    "identifier": "id",
    "type": "fact",
  },
]
`;

exports[`available item filtering response conversion should convert fact when it comes as string 1`] = `
Array [
  Object {
    "identifier": "some_id",
    "type": "fact",
  },
]
`;

exports[`available item filtering response conversion should convert label id when it comes as object 1`] = `
Array [
  Object {
    "identifier": "id",
    "type": "displayForm",
  },
]
`;

exports[`available item filtering response conversion should convert label id when it comes as string 1`] = `
Array [
  Object {
    "identifier": "some_id",
    "type": "displayForm",
  },
]
`;

exports[`available item filtering response conversion should convert metric when it comes as object 1`] = `
Array [
  Object {
    "identifier": "id",
    "type": "measure",
  },
]
`;

exports[`available item filtering response conversion should convert metric when it comes as string 1`] = `
Array [
  Object {
    "identifier": "some_id",
    "type": "measure",
  },
]
`;
